#2747: Use JDK 17 as baseline (#2748)
* #2747: Use JDK 17 as baseline

* #2747: include the latest available maven central openrewrite maven plugin and openrewrite receipe

* #2747: execute openRewrite UpgradeToJava17 -  mvn rewrite:run

* #2747: apply spotless

* #2747: remove redundant dependency added by openrewrite script exeuction

* #2747: remove openrewrite plugin

* #2747: bumps all the pom.xml's to 17.0.0-SNAPSHOT